--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+    <section id="welcome-section">
+
+    </section>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
