--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   </head>
 
   <body>
+    <nav id="navbar">
+        <div class="menu">
+            <a href="#">About</a>
+            <a href="#">Work</a>
+            <a href="#">Contact</a>
+        </div>
+    </nav>
     <section id="welcome-section">
-
+      <h1>Hey I am Mimic</h1>
     </section>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
