--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
 
-  <body>
-    <nav id="navbar">
-        <div class="menu">
-            <a href="#">About</a>
-            <a href="#">Work</a>
-            <a href="#">Contact</a>
-        </div>
-    </nav>
-    <section id="welcome-section">
-      <h1>Hey I am Mimic</h1>
-    </section>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <!--
+<body>
+  <nav id="navbar">
+    <div class="menu">
+      <a href="#">About</a>
+      <a href="#">Work</a>
+      <a href="#">Contact</a>
+    </div>
+  </nav>
+  <section id="welcome-section">
+    <h1>Hey I am Mimic</h1>
+  </section>
+  <section id="projects">
+    <h2>This are some of my projects</h2>
+    <div class="project-tile">
+      <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" id="profile-link"><img
+          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project01"></a>
+      <p>Tribute Page</p>
+    </div>
+    <div class="project-tile">
+      <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank"><img
+          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="project02 a Calculator"></a>
+      <p>JavaScript Calculator</p>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+  <!--
 
     Hello Camper!
 
@@ -31,6 +54,7 @@
     - The freeCodeCamp Team
 
     -->
-    <script  src="js/index.js"></script>
-  </body>
+  <script src="js/index.js"></script>
+</body>
+
 </html>
