--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
       <a href="#">Contact</a>
     </div>
   </nav>
+  
   <section id="welcome-section">
     <h1>Hey I am Mimic</h1>
+    <p>a web developer</p>
   </section>
+
+  <!-- project entry -->
   <section id="projects">
     <h2>This are some of my projects</h2>
     <div class="project-tile">
@@ -26,7 +30,7 @@
       <p>Tribute Page</p>
     </div>
     <div class="project-tile">
-      <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank"><img
+      <a href="https://codepen.io/freeCodeCamp/full/wgGVVX"  id="profile-link" target="_blank"><img
           src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="project02 a Calculator"></a>
       <p>JavaScript Calculator</p>
     </div>
